# language-learning-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: auth.py  exercises.py  languages.py  statistics.py  user_exercise_history.py  users.py
app/core/: config.py  security.py
app/crud/: exercise.py  exercise_history.py  user.py  user_exercise_history.py  user_language.py
app/db/: __init__.py  column_types.py  connection.py
app/models/: __init__.py  exercise.py  user.py  user_exercise_history.py  user_level_language.py  user_level_languages.py  users.py
app/schemas/: __init__.py  common.py  enums.py  exercise.py  statistics.py  token.py  user.py  user_exercise_history.py  user_level_language.py
app/services/: auth.py  exercise.py  statistics.py  user.py  user_exercise_history.py  user_language.py
app/utils/: enum_utils.py  helpers.py  normalizers.py  validators.py
migrations/: env.py
migrations/versions/: 3ebb198c91e4_add_non_nullable_text_column_to_to_.py  756af3813bf4_add_status_column_with_check_constraint.py  808ed363444b_remove_duplicate_unique_index_on_user_.py  860522b56861_fix_foreign_key_user_fk_cascade_.py  99a19fb9275f_.py  99a19fb9275f_initial_migration.py  9d7c65ea9a7c_add_user_role_enum.py  bf1b5c6bd1d9_remove_is_correct_column.py  e9d426e6d045_add_fill_blank_to_exercise_type_enum.py  f363429e20bf_add_unique_constraint_and_make_active_.py  f47b1a71c0df_add_translation_completeness_check.py  f4962d68824f_add_active_learning_language_reference_.py
